<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tv_level"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/battery_level"/>
    <TextView
        android:id="@+id/tv_voltage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/voltage"/>
    <TextView
        android:id="@+id/tv_temperature"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/temperature"/>
    <TextView
        android:id="@+id/tv_technology"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/technology"/>
    <TextView
        android:id="@+id/tv_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/status"/>
    <TextView
        android:id="@+id/tv_health"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/health"/>
    <TextView
        android:id="@+id/tv_current"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/current"/>
    <TextView
        android:id="@+id/tv_charge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/charge"/>
    <ImageView
        android:id="@+id/img_battery_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
</LinearLayout>